prevent upsells heading row from displaying on small screens since the rental rate headings are added to each product

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
  Author:       Mike Maltby
  Author URI:   http://ingersollrentall.com
  Template:     onepress
- Version:      1.0.44.15
+ Version:      1.0.44.17
  License:      GNU General Public License v2 or later
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
 */
@@ -155,6 +155,10 @@
 }
 
 @media only screen and (max-width: 768px) {
+
+  .upsells .product-upsells-heading-row {
+    display: none;
+  }
 
   .upsells .rental-price-heading {
     display: inline-block !important;
